tests/init/neg/inlined-method.check
-- Error: tests/init/neg/inlined-method.scala:8:45 ---------------------------------------------------------------------
8 |    scala.runtime.Scala3RunTime.assertFailed(message) // error
  |                                             ^^^^^^^
  |    Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak. Calling trace:
  |    -> class InlineError {	[ inlined-method.scala:1 ]
  |       ^
  |    -> Assertion.failAssert(this)	[ inlined-method.scala:2 ]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |    -> scala.runtime.Scala3RunTime.assertFailed(message) // error	[ inlined-method.scala:8 ]
  |                                                ^^^^^^^
